--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: openjdk-8
+      java: corretto8	
   post_build:
     commands:
       - mvn install && mvn package
