--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,10 +7,10 @@ phases:
     commands:
       #- unzip *.zip
       - mvn install && mvn package
-      - mv target/hello-world-war-1.0.0.war target/hello-world-1.war
+      - mv target/hello-world-war-1.0.0.war target/hello-world.war
 artifacts:
   files:
-    - target/hello-world-1.war
+    - target/hello-world.war
     #- .ebextensions/**/*
   #base-directory: 'target'
   discard-paths: yes
