--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,8 @@ phases:
       - mv target/hello-world-war-1.0.0.war target/hello-world.war
 artifacts:
   files:
-    - target/hello-world.war
+    - target/*
+    #- target/hello-world.war
     #- .ebextensions/**/*
   #base-directory: 'target'
   discard-paths: yes
