--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,10 +8,12 @@ phases:
       #- unzip *.zip
       - mvn install && mvn package
       - mv target/hello-world-war-1.0.0.war target/hello-world.war
+      - cd target
+      - zip -r hello.zip *
 artifacts:
   files:
-    #- target/*
-    - target/hello-world.war
+    - target/hello.zip
+    #- target/hello-world.war
     #- .ebextensions/**/*
   #base-directory: 'target'
   discard-paths: yes
