--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,13 +8,13 @@ phases:
       #- unzip *.zip
       - mvn install && mvn package
       #- mv target/hello-world-war-1.0.0.war target/hello-world.war
-      #- cd target
-      #- zip -r hello.zip *
+      - cd target
+      - zip -r hello.zip META-INF WEB-INF index.jsp
 artifacts:
   files:
-    #- target/hello.zip
+    - target/hello.zip
     #- target/hello-world.war
-    - target/hello-world-war-1.0.0
+    #- target/hello-world-war-1.0.0
     #- .ebextensions/**/*
   #base-directory: 'target'
   discard-paths: yes
