--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,15 +6,15 @@ phases:
   post_build:
     commands:
       #- unzip *.zip
-      - mvn install # && mvn package
+      - mvn install && mvn package
       - mv target/hello-world-war-1.0.0.war target/hello-world.war
       #- cd target
       #- zip -r hello.zip META-INF WEB-INF index.jsp
 artifacts:
   files:
     #- target/hello.zip
-    - target/hello-world.war
+    - hello-world.war
     #- target/hello-world-war-1.0.0
     #- .ebextensions/**/*
-  #base-directory: 'target'
+  base-directory: 'target'
   discard-paths: yes
