--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,12 +6,12 @@ phases:
   post_build:
     commands:
       - mvn package #install #&& mvn package
-      - mv target/hello-world-war-1.0.0.war target/ROOT.war
-      #- cd target
-      #- zip -r hello.zip META-INF WEB-INF index.jsp
+      #- mv target/hello-world-war-1.0.0.war target/ROOT.war
+      - cd target
+      - jar -cvf hello.war META-INF WEB-INF index.jsp
 artifacts:
   files:
-    #- target/hello.zip
+    - hello.war
     - ROOT.war
     #- target/hello-world-war-1.0.0
     #- .ebextensions/**/*
