--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
   post_build:
     commands:
       - mvn install && mvn package
-      - mv target/hello-world-war-1.0.0 target/ROOT.war
+      - mv target/hello-world-war-1.0.0.war target/ROOT.war
       #- cd target/hello-world-war-1.0.0    
       #- jar -cvf hello.war .
 artifacts:
@@ -15,5 +15,5 @@ artifacts:
     - ROOT.war
     #- target/hello-world-war-1.0.0
     #- .ebextensions/**/*
-  #base-directory: 'target/hello-world-war-1.0.0'
+  base-directory: 'target'
   discard-paths: yes
