--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,8 @@ phases:
 artifacts:
   files:
     #- hello.war
-    - ROOT.war
+    - target/ROOT.war
     #- target/hello-world-war-1.0.0
-    #- .ebextensions/**/*
-  base-directory: 'target'
+    - .ebextensions/**/*
+  #base-directory: 'target'
   discard-paths: yes
