Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,8 +64,21 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Azure Web App Deploy: tomcat549'
             inputs:
+              ConnectionType: 'AzureRM'
               azureSubscription: 'Azure для учащихся (f3ef0eca-ea60-461f-a719-b8ee67022bcd)'
               appType: 'webAppLinux'
-              appName: 'tomcat549'
-              package: '$(Pipeline.Workspace)/drop/*.war'
-              runtimeStack: 'TOMCAT|8.5-java11'
+              WebAppName: 'tomcat549'
+              deployToSlotOrASE: true
+              ResourceGroupName: 'web_app_resource_group'
+              SlotName: 'production'
+              packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+              RuntimeStack: 'TOMCAT|8.5-java11'
+              ScriptType: 'Inline Script'
+              InlineScript: |
+                pwd
+                ls $(System.DefaultWorkingDirectory)/**/
+                ls $(System.DefaultWorkingDirectory)/
+                        appType: 'webAppLinux'
+                        appName: 'tomcat549'
+                        package: '$(Pipeline.Workspace)/drop/*.war'
+                        runtimeStack: 'TOMCAT|8.5-java11'
